# markdown_to_html

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
documentation/: project_structure.md
src/markdown_converter/: cli.py  converter.py  main.py  processor.py  utils.py  validations.py
test_files/: test.html  test.md
tests/: test_cli_functionallity.py  test_cli_integration.py  test_cli_subprocess.py  test_converter.py
tests/test_files/: anjing.html  balabardos.html  main.html
