[project]
name = "md2html"
version = "0.1.0"
description = "A simple Markdown to HTML converter"
authors = [{name = "Rigaqi"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: Markdown"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["markdown", "html", "converter", "cli"]
dependencies = [
    "markdown == 3.8"
]

[project.scripts]
md2html = "markdown_converter.main:main"


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[tool.hatch.build]
sources = ["src"]


[tool.hatch.build.targets.wheel]
packages = ["src"]